examples/Failing/If/bad_if_assignment.c
int main() {
    int a= if (1 > 5) 
        2;
        else
        3;
    }
